--- a/JTB_ms/JTB_ms.tex
+++ b/JTB_ms/JTB_ms.tex
@@ -295,7 +295,7 @@ Specific turnover rate of host biomass
 0.03
 \strut\end{minipage} &
 \begin{minipage}[t]{0.23\columnwidth}\raggedright\strut
-\(d^{-1}\)
+d\textsuperscript{-1}
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(j_{ST}^0\)
@@ -307,7 +307,7 @@ Specific turnover rate of symbiont biomass
 0.03
 \strut\end{minipage} &
 \begin{minipage}[t]{0.23\columnwidth}\raggedright\strut
-\(d^{-1}\)
+d\textsuperscript{-1}
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(\sigma_{NH}\)
@@ -367,7 +367,7 @@ Maximum specific feeding rate of host
 0.1292
 \strut\end{minipage} &
 \begin{minipage}[t]{0.23\columnwidth}\raggedright\strut
-\(molX \cdot CmolH^{-1} \cdot d^{-1}\)
+molX CmolH\textsuperscript{-1} d\textsuperscript{-1}
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(K_X\)
@@ -379,7 +379,7 @@ Half-saturation constant for prey uptake by host
 20e-6
 \strut\end{minipage} &
 \begin{minipage}[t]{0.23\columnwidth}\raggedright\strut
-\(molX \cdot L^{-1}\)
+molX L\textsuperscript{-1}
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(j_{Nm}\)
@@ -391,7 +391,7 @@ Maximum specific DIN uptake rate by host
 0.048
 \strut\end{minipage} &
 \begin{minipage}[t]{0.23\columnwidth}\raggedright\strut
-\(molN \cdot CmolH^{-1} \cdot d^{-1}\)
+molN CmolH\textsuperscript{-1} d\textsuperscript{-1}
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(K_N\)
@@ -403,7 +403,7 @@ Half-saturation constant for DIN uptake by host
 0.46e-6
 \strut\end{minipage} &
 \begin{minipage}[t]{0.23\columnwidth}\raggedright\strut
-\(molN \cdot L^{-1}\)
+molN L\textsuperscript{-1}
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(j_{CO_2}^p\)
@@ -415,7 +415,7 @@ Passive CO\textsubscript{2} delivery to symbiont
 4.04e-3
 \strut\end{minipage} &
 \begin{minipage}[t]{0.23\columnwidth}\raggedright\strut
-\(molC \cdot CmolH^{-1} \cdot d^{-1}\)
+molC CmolH\textsuperscript{-1} d\textsuperscript{-1}
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(j_{CO_2}^a\)
@@ -427,7 +427,7 @@ Active CO\textsubscript{2} delivery to symbiont
 0.32--18.0
 \strut\end{minipage} &
 \begin{minipage}[t]{0.23\columnwidth}\raggedright\strut
-\(molC \cdot CmolH^{-1} \cdot d^{-1}\)
+molC CmolH\textsuperscript{-1} d\textsuperscript{-1}
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(j_{HGm}\)
@@ -439,7 +439,7 @@ Maximum specific growth rate of host
 1
 \strut\end{minipage} &
 \begin{minipage}[t]{0.23\columnwidth}\raggedright\strut
-\(d^{-1}\)
+d\textsuperscript{-1}
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(n_{LC}\)
@@ -451,7 +451,7 @@ Quantum yield of photosynthesis
 0.1
 \strut\end{minipage} &
 \begin{minipage}[t]{0.23\columnwidth}\raggedright\strut
-\(molC \cdot mol ph^{-1}\)
+molC mol ph\textsuperscript{-1}
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(\bar{a}^*\)
@@ -463,7 +463,7 @@ Effective light-absorbing cross-section of symbiont
 1.34
 \strut\end{minipage} &
 \begin{minipage}[t]{0.23\columnwidth}\raggedright\strut
-\(m^2 \cdot CmolS^{-1}\)
+m\textsuperscript{2} CmolS\textsuperscript{-1}
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(j_{NPQ}\)
@@ -475,7 +475,7 @@ Non-photochemical quenching capacity of symbiont
 40
 \strut\end{minipage} &
 \begin{minipage}[t]{0.23\columnwidth}\raggedright\strut
-\(mol ph \cdot CmolS^{-1} \cdot d^{-1}\)
+mol ph CmolS\textsuperscript{-1} d\textsuperscript{-1}
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(k_{ROS}\)
@@ -487,7 +487,7 @@ Excess photon energy that doubles ROS prod.
 40-80
 \strut\end{minipage} &
 \begin{minipage}[t]{0.23\columnwidth}\raggedright\strut
-\(mol ph \cdot CmolS^{-1} \cdot d^{-1}\)
+mol ph CmolS\textsuperscript{-1} d\textsuperscript{-1}
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(k\)
@@ -511,7 +511,7 @@ Maximum specific photosynthesis rate of symbiont
 2.8
 \strut\end{minipage} &
 \begin{minipage}[t]{0.23\columnwidth}\raggedright\strut
-\(molC \cdot CmolS^{-1} \cdot d^{-1}\)
+molC CmolS\textsuperscript{-1} d\textsuperscript{-1}
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(j_{SGm}\)
@@ -523,7 +523,7 @@ Maximum specific growth rate of symbiont
 0.25
 \strut\end{minipage} &
 \begin{minipage}[t]{0.23\columnwidth}\raggedright\strut
-\(d^{-1}\)
+d\textsuperscript{-1}
 \strut\end{minipage}\tabularnewline
 \bottomrule
 \end{longtable}
@@ -728,36 +728,113 @@ of 0.1 days was used for all simulations, which were performed using R
 code that is available in the data repository accompanying this article:
 \url{github.com/jrcunning/Rcoral}.
 
+To aid in visualizing model results, we calculated values to indicate
+the degree to which product formation at an SU was limited by
+availability of either of its two substrates
+
+\begin{equation} \log \bigg({{\min(j_{S1}, j_{Pm})} \over {\min(j_{S2}, j_{Pm})}}\bigg) \end{equation}
+
+where \(j_{S1}\) and \(j_{S2}\) are the specific input fluxes of the two
+substrates and \(j_{Pm}\) is the maximum specific product formation
+rate, all with units of Cmol Cmol\textsuperscript{-1}
+d\textsuperscript{-1}.
+
 \section{Model behavior evaluation}\label{model-behavior-evaluation}
 
 To analyze qualitative behavior, we ran the model to steady state across
-gradients of external irradiance and DIN, and plotted the specific
-growth rate (Fig. 2A) and symbiont to host biomass ratio (Fig. 2B).
-Results are consistent with observations in corals: specific growth
-rates are low at very low levels of irradiance and DIN, as these
-scenarios limit the availability of carbon and nitrogen, respectively,
-to build biomass. As these resources increase, specific growth
-increases, reaching its highest levels above 2 µM DIN and
-\textasciitilde{}15 mol photons m\textsuperscript{-2}
-d\textsuperscript{-1}. Peak specific growth rates are around
-\textasciitilde{}0.1 d\textsuperscript{-1}, which is consistent with
-values reported in the literature (Muscatine, R McCloskey, and E Marian
-(1981)).
+gradients of external irradiance and nutrients (Fig. 2), which revealed
+patterns that are consistent with observed phenomena in corals.
+
+\emph{Specific growth rates} are low at low light and DIN
+(\textasciitilde{}0.01-0.03 d\textsuperscript{-1}), and begin increasing
+as both of these factors increase (Fig. 2A). Higher light alleviates
+light-limitation of photosynthesis (Fig. 2D), and consequently
+carbon-limitation of host growth (Fig. 2B). Similarly, elevated DIN
+alleviates nitrogen-limitation of host growth (Fig. 2B), a trend that
+was also predicted by the DEB model of Muller et al. (2009), and has
+been observed experimentally (Muller-Parker et al. 1994; Tanaka et al.
+2013). Very high nutrient levels may have negative direct and indirect
+impacts on growth (\textbf{???}), though these are not likely to occur
+until beyond the range of concentrations considered here (Ferrier-Pagès
+et al. 2000). The maximum specific growth rates of \textasciitilde{}0.09
+d\textsuperscript{-1}, occurring between \textasciitilde{}10-15 mol
+photons m\textsuperscript{-2} s\textsuperscript{-1} light and
+\textgreater{}1 µM DIN, are an order of magnitude higher than those
+typically observed for corals (\textbf{???}). The primary reasons for
+this overestimation of host growth are 1) the model does not account for
+calcification, and 2) it does not account for size-dependent reductions
+in growth that likely occur as individual polyps and/or colonies grow
+(Sebens1980?, probably better refs)\ldots{} (i.e., the system continues
+growing exponentially in this model). However, the estimated specific
+growth rates are consistent with rates of biomass increase in
+\emph{Aiptasia}, measured at 0.04 d\textsuperscript{-1} (\textbf{???}),
+suggesting they are biologically realistic. They also match the values
+predicted by the full DEB model of (\textbf{???}). Furthermore, the
+relative differences across environmental gradients are likely to be the
+same.
+
+As irradiance continues to increase above \textasciitilde{}15-20 mol
+photons m\textsuperscript{-2} d\textsuperscript{-1}, growth rates
+decline until the symbiosis is no longer viable above
+\textasciitilde{}30 µmol photons m\textsuperscript{-2}
+d\textsuperscript{-1}. The mechanism underlying this breakdown is the
+production of ROS caused by excitation energy in excess of what can be
+quenched by symbiont photosynthesis and non-photochemical quenching. ROS
+production has the consequence of increasing symbiont biomass loss
+(photodamage) and decreasing photosynthesis rates (photoinhibition),
+which have the net effect of reducing fixed carbon input to the system
+below levels necessary to sustain the symbiosis.
+
+\emph{Symbiont to host biomass ratios} at low DIN (e.g. \textless{}1 µM)
+and high light (e.g., \textasciitilde{}20 mol ph m\textsuperscript{-2}
+d\textsuperscript{-2}) typical of coral reef environments are around
+\textasciitilde{}0.1-0.3, which are consistent with values reported in
+the literature (Muscatine, R McCloskey, and E Marian (1981); Edmunds et
+al. (2011)). S:H ratios increase under higher nutrients () and lower
+light ().
+
+\_
 
 \begin{figure}[htbp]
 \centering
 \includegraphics{../img/Fig2.png}
-\caption{Steady state values of (A) specific growth (Cmol
-Cmol\textsuperscript{-1} d\textsuperscript{-1}) and (B) the symbiont to
-host biomass ratio (CmolS CmolH\textsuperscript{-1}) across gradients of
-external irradiance and dissolved inorganic nitrogen. Simulations for
-each combination of light and nutrients (21 points along each axis) were
-run for 100 days with a time step of 1 day. Negative steady state growth
-rates, and corresponding S:H ratios, were set to zero.}
+\caption{Steady state values of \textbf{A)} specific growth (Cmol
+Cmol\textsuperscript{-1} d\textsuperscript{-1}), \textbf{B)} the
+symbiont to host biomass ratio (CmolS CmolH\textsuperscript{-1}),
+\textbf{C)} relative C- or N-limitation of host biomass formation, and
+\textbf{D)} relative CO\textsubscript{2}- or light-limitation of
+symbiont photosynthesis, across gradients of external irradiance and
+dissolved inorganic nitrogen. Simulations for each combination of light
+and nutrients (41 points along each axis) were run for 120 days with a
+time step of 1 day. Negative steady state growth rates, and
+corresponding S:H ratios, were set to zero.}
 \end{figure}
 
-\section{Discussion - Potential
-applications/utility}\label{discussion---potential-applicationsutility}
+\section{More things to show:}\label{more-things-to-show}
+
+\subsection{varying light: consequences of excess light and
+light-limitation}\label{varying-light-consequences-of-excess-light-and-light-limitation}
+
+\subsection{varying DIN: role of N-limitation and consequences of
+elevated
+N}\label{varying-din-role-of-n-limitation-and-consequences-of-elevated-n}
+
+\subsection{elevated nutrients cause system to become C-limited (photo:
+CO2 limited; host: fixed C
+limited)}\label{elevated-nutrients-cause-system-to-become-c-limited-photo-co2-limited-host-fixed-c-limited}
+
+\subsection{C-limitation increases susceptibility to
+bleaching}\label{c-limitation-increases-susceptibility-to-bleaching}
+
+\subsection{consequences of a less efficient but more tolerant
+symbiont}\label{consequences-of-a-less-efficient-but-more-tolerant-symbiont}
+
+\subsection{Rate of symbiont repopulation (Berner et al.
+1993)}\label{rate-of-symbiont-repopulation-berner-et-al.-1993}
+
+\subsection{Bicarbonate addition promotes coral growth (Marubini and
+Thake
+1999)}\label{bicarbonate-addition-promotes-coral-growth-marubini-and-thake-1999}
 
 \section*{References}\label{references}
 \addcontentsline{toc}{section}{References}
@@ -769,6 +846,12 @@ value of ecosystem services.'' \emph{Global Environmental Change} 26:
 152--58.
 doi:\href{https://doi.org/10.1016/j.gloenvcha.2014.04.002}{10.1016/j.gloenvcha.2014.04.002}.
 
+\hypertarget{ref-Edmunds:2011bv}{}
+Edmunds, Peter J, Hollie M Putnam, Roger M Nisbet, and Erik B Muller.
+2011. ``Benchmarks in organism performance and their use in comparative
+analyses.'' \emph{Oecologia} 167 (2): 379--90.
+doi:\href{https://doi.org/10.1007/s00442-011-2004-2}{10.1007/s00442-011-2004-2}.
+
 \hypertarget{ref-Enriquez:2005p142}{}
 Enríquez, Susana, Eugenio R Méndez, and Roberto Iglesias-Prieto. 2005.
 ``Multiple scattering on coral skeletons enhances light absorption by
@@ -779,6 +862,13 @@ Eynaud, Yoan, Roger M Nisbet, and Erik B Muller. 2011. ``Impact of
 excess and harmful radiation on energy budgets in scleractinian
 corals.'' \emph{Ecological Modelling} 222 (7). Elsevier: 1315--22.
 \url{http://www.sciencedirect.com/science/article/pii/S0304380011000263}.
+
+\hypertarget{ref-FerrierPages:2000p1950}{}
+Ferrier-Pagès, Christine, Jean-Pierre Gattuso, S Dallot, and Jean
+Jaubert. 2000. ``Effect of nutrient enrichment on growth and
+photosynthesis of the zooxanthellate coral Stylophora \ldots{}.''
+\emph{Coral Reefs}.
+\url{http://www.springerlink.com/index/3DRC3K1Q57TPC0UT.pdf}.
 
 \hypertarget{ref-Glynn:2001p7571}{}
 Glynn, Peter W, Juan L Maté, Andrew C Baker, and MO Calderón. 2001.
@@ -817,6 +907,12 @@ symbiotic relationships between heterotrophic hosts and photoautotrophic
 symbionts.'' \emph{Journal of Theoretical Biology} 259 (1): 44--57.
 doi:\href{https://doi.org/10.1016/j.jtbi.2009.03.004}{10.1016/j.jtbi.2009.03.004}.
 
+\hypertarget{ref-MullerParker:1994uo}{}
+Muller-Parker, Gisèle, Lawrence R McCloskey, Ove Hoegh-Guldberg, and PJ
+McAuley. 1994. ``Effect of ammonium enrichment on animal and algal
+biomass of the coral Pocillopora damicornis.'' \emph{Pacific Science} 48
+(3). \url{http://scholarspace.manoa.hawaii.edu/handle/10125/2236}.
+
 \hypertarget{ref-Muscatine:1977p4220}{}
 Muscatine, Leonard, and James W Porter. 1977. ``Reef corals: mutualistic
 symbioses adapted to nutrient-poor environments.'' \emph{Bioscience} 27
@@ -837,6 +933,12 @@ Computing.'' Vienna, Austria: R Foundation for Statistical Computing.
 Roth, M S. 2014. ``The engine of the reef: Photobiology of the
 coral-algal symbiosis.'' \emph{Frontiers in Microbiology}.
 \url{http://journal.frontiersin.org/Journal/10.3389/fmicb.2014.00422/pdf}.
+
+\hypertarget{ref-Tanaka:2013dj}{}
+Tanaka, Yasuaki, Akira Iguchi, Mayuri Inoue, Chiharu Mori, K Sakai,
+Atsushi Suzuki, Hodaka Kawahata, and Takashi Nakamura. 2013. ``Marine
+Pollution Bulletin.'' \emph{Marine Pollution Bulletin} 68 (1-2): 93--98.
+doi:\href{https://doi.org/10.1016/j.marpolbul.2012.12.017}{10.1016/j.marpolbul.2012.12.017}.
 
 \hypertarget{ref-Wang:1998p128}{}
 Wang, J, and Angela E Douglas. 1998. ``Nitrogen recycling or nitrogen
