--- a/Rmd/analyze.Rmd
+++ b/Rmd/analyze.Rmd
@@ -1,22 +1,22 @@
 ---
-title: "Untitled"
+title: "Model behavior analysis"
 author: "Ross Cunning, Erik B. Muller, Ruth D. Gates, Roger R. Nisbet"
 date: "September 15, 2016"
 output: html_document
 ---
 ```{r setup, include=FALSE}
 knitr::opts_knit$set(root.dir = normalizePath(".."))
+knitr::opts_chunk$set(message = F, warning = F)
 ```
 
 ```{r initialize, include=FALSE}
-# Initialize SU function
-synth <- function(x, y, m) 1/((1/m)+(1/x)+(1/y)-(1/(x+y)))
 # Source default parameters and functions
 sapply(c("R/conversions.R", "R/def_pars.R", "R/init_env.R", "R/plot_results.R",
-         "R/run_coral.R", "R/sym_PI.R"), source, .GlobalEnv)
+         "R/run_coral.R", "R/sym_PI.R", "R/run_steady_states.R", "R/plot_steady_states.R",
+         "R/explore_NPQ.R"), source, .GlobalEnv)
 ```
 
-```{r lightamp, fig.width=5, fig.height=5, eval=F}
+```{r lightamp, fig.width=5, fig.height=5, eval=F, include=F}
 # Import data from Marcelino et al. 2013
 md <- read.csv("data/marcelino2013_fig2a.csv")
 md$S.R <- md$density * cm2.m2 / CmolR.m2 * CmolS.cellS  # Convert units of symbiont density to CmolS/CmolR
@@ -35,44 +35,270 @@ lines(fit ~ seq(0, 0.5, 0.01))
 formula(mod); coef(mod)
 ```
 
+### Steady states values with default parameters (jCO2a=0.32)
+```{r ss, cache=T, fig.width=5, fig.height=4.4}
+# Set time and parameters
+time <- seq(1,100,1)
+defpars <- def_pars()  # Get default parameters
+
+# Set values of L and N at which to get steady state values
+at <- expand.grid(L=seq(from=0, to=60, length.out=11),
+                  N=seq(from=0, to=4e-6, length.out=11))
+
+# Run to steady state and plot results
+ssdat <- run_steady_states(time=time, pars=defpars, at=at)
+plot_steady_states(ssdat)
+```
+
+With default parameters, steady state values of specific growth are higher than usually observed in corals (skeletal growth).
+
+### Change kROS from 60 to 100
+```{r, cache=T, fig.width=5, fig.height=4.4, eval=T, include=T}
+pars <- defpars
+pars$kROS <- 100
+# Run to steady state and plot results
+ssdat <- run_steady_states(time=time, pars=pars, at=at)
+plot_steady_states(ssdat)#
+```
+
+### Change kROS to 100 and b to 5
+```{r, cache=T, fig.width=5, fig.height=4.4, eval=T, include=T}
+pars <- defpars
+pars$kROS <- 100
+pars$b <- 5
+# Run to steady state and plot results
+ssdat <- run_steady_states(time=time, pars=pars, at=at)
+plot_steady_states(ssdat)#
+```
+
+### Take away recycling...
+```{r ss2, cache=T, fig.width=5, fig.height=4.4, eval=F, include=F}
+pars <- defpars
+pars$sigmaCH <- 0
+pars$sigmaCS <- 0
+pars$sigmaNH <- 0
+pars$sigmaNS <- 0
+# Run to steady state and plot results
+ssdat <- run_steady_states(time=time, pars=pars, at=at)
+plot_steady_states(ssdat)
+```
+
+Specific growth rates are reduced by a bit, and both growth and S:H do not increase as much in response in increasing DIN.
+
+### Increase CO2 delivery rate (jCO2a=0.5)
+```{r, cache=T, fig.width=5, fig.height=4.4, eval=F, include=F}
+ssdat <- run_steady_states(time=time, at=at,
+                            pars=replace(defpars, "jCO2a", 0.5))
+plot_steady_states(ssdat) 
+```
+
+CO~2~ limitation of photosynthesis is reduced, and S:H biomass does not increase as much in response to low light.
+
+### Increase CO2 delivery rate even more (jCO2a=1)
+```{r, cache=T, fig.width=5, fig.height=4.4, eval=F, include=F}
+ssdat <- run_steady_states(time=time, at=at,
+                            pars=replace(defpars, "jCO2a", 1))
+plot_steady_states(ssdat) 
+```
+
+Photosynthesis never becomes CO~2~-limited.
+
+### Decrease CO2 delivery rate (jCO2a=0.1)
+```{r, cache=T, fig.width=5, fig.height=4.4, eval=F, include=F}
+ssdat <- run_steady_states(time=time, at=at,
+                            pars=replace(defpars, "jCO2a", 0.1))
+plot_steady_states(ssdat) 
+```
+
+Photosynthesis is always CO~2~-limited, and host growth almost always carbon-limited. Upper light limit is reduced, and S:H biomass ratios are increased. 
+
+### Decrease CO2 delivery rate even more (jCO2a=0.05)
+```{r, cache=T, fig.width=5, fig.height=4.4, eval=F, include=F}
+ssdat <- run_steady_states(time=time, at=at,
+                            pars=replace(defpars, "jCO2a", 0.05))
+plot_steady_states(ssdat) 
+```
+
+Increasing DIN now decreases growth rates. S:H ratios are uniformly high.
+
+### Default parameters with tolerant symbiont (kROS=100; jCPm=1.4)
+```{r, cache=T, fig.width=5, fig.height=4.4, eval=F, include=F}
+ssdat <- run_steady_states(time=time, at=at,
+                            pars=replace(defpars, c("kROS","jCPm"), c(100, 1.4)))
+plot_steady_states(ssdat) 
+```
+
+### Default parameters with only lower photosynthesis rate (jCPm=1.4)
+```{r, cache=T, fig.width=5, fig.height=4.4, eval=F, include=F}
+ssdat <- run_steady_states(time=time, at=at,
+                            pars=replace(defpars, "jCPm", 1.4))
+plot_steady_states(ssdat) 
+```
+
+
+### Default parameters with only lower photosynthesis rate (jCPm=2)
+```{r, cache=T, fig.width=5, fig.height=4.4, eval=F, include=F}
+ssdat <- run_steady_states(time=time, at=at,
+                            pars=replace(defpars, "jCPm", 2))
+plot_steady_states(ssdat) 
+```
+
+
+
+
 ### Run 1
 ```{r run1}
 # Set run time vector
-time <- seq(1, 365, 0.1)  # if single model run, use time input
+time <- seq(1, 365, 0.5)  # if single model run, use time input
 
 # Initialize environment
-env <- init_env(time=time, L=c(20,32,2), N=c(1e-6,1e-6,0), X=c(0,0,0))
+env <- init_env(time=time, L=c(5,40,2), N=c(1e-7,1e-7,0), X=c(0,0,0))
 
 # Set parameters
-pars <- def_pars()  # Get default parameters
-#pars$rpars$gammaR <- 0.03  # Change any default parameters
-#pars$jCO2a <- 1
-#pars$jCO2a <- 0.1
+defpars <- def_pars()  # Get default parameters
 
 # Run simulation
-run <- run_coral(time=time, env=env, pars=pars)
+run <- run_coral(time=time, env=env, pars=defpars)#
 ```
 
 ##### Plot run 1 symbiont PI curve
-```{r run1_PI, fig.height=1}
-#sym_PI(pars)
+```{r run1_PI, cache=T, fig.height=3}
+sym(pars=replace(defpars, c("kNPQ", "kROS", "k"), c(40, 30, 1)), jL=c(0,250), jCO2=c(100,100), NPQ="fixed")
 ```
 
 ##### Plot run 1 output
-```{r run1_plots}
+```{r abb, fig.height=8, fig.width=3, eval=T, include=T}
+time <- seq(1,365,0.5)
+env <- init_env(time=time, L=c(5,40,2), N=c(1e-7,1e-7,0), X=c(4e-6,4e-6,0))
+run <- run_coral(time=time, env=env, 
+                 pars=replace(defpars, c("kNPQ", "kROS", "k", "b", "jCO2a"), c(30, 10, 1, 5, 0.32)),
+                 NPQ="fixed2", photoinhibition=T)
+plot_run2(run)
+env <- init_env(time=time, L=c(10,40,2), N=c(1e-7,1e-7,0), X=c(4e-6,4e-6,0))
+run <- run_coral_jCO2a(time=time, env=env,
+                 pars=replace(defpars, c("kNPQ", "kROS", "k", "b"), c(80, 80, 1, 10)),
+                 NPQ="fixed2")
+run$H$jCO2a
+run$S$jCP * run$S$S / run$H$H
+plot_run2(run)
+
+env <- init_env(time=time, L=c(40,40,0), N=c(1e-7,1e-7,0), X=c(5e-5,5e-5,0))
+run <- run_coral_jCO2a_manual(time=time, env=env, jCO2a_vals=c(3,1),
+                 pars=replace(defpars, 
+                              c("kNPQ", "kROS", "k", "b", "sigmaCS", "sigmaCH"), 
+                              c(60,       40,    1,   5,      0,         0)),
+                 NPQ="fixed2")
+plot_run2(run)
+
+
+
+##### VARY NITROGEN
+# RUN USING WASTED CARBON AND NO JCO2A
+time <- seq(1,1230,1)
+env <- init_env(time=time, L=c(15,15,2), N=c(1e-7,1e-6,2), X=c(5e-6,5e-6,0))
+run <- run_coral_wC(time=time, env=env,
+                 pars=replace(defpars, 
+                              c("kNPQ", "kROS", "k", "b", "sigmaCS", "sigmaCH", "jCO2a"), 
+                              c(40,       30,    1,   5,      0.9,         0.9, 0)),
+                 NPQ="fixed2")
 plot_run(run)
+
+# RUN USING JCO2A (original version of model)
+run <- run_coral(time=time, env=env,
+                 pars=replace(defpars, 
+                              c("kNPQ", "kROS", "k", "b", "sigmaCS", "sigmaCH", "jCO2a"), 
+                              c(40,       30,    1,   5,      0.9,         0.9, 0.32)),
+                 NPQ="fixed2")
+plot_run(run)
+
+
+##### VARY LIGHT
+# RUN USING WASTED CARBON AND NO JCO2A
+time <- seq(1,1230,1)
+env <- init_env(time=time, L=c(10,25,2), N=c(1e-7,1e-7,2), X=c(5e-6,5e-6,0))
+run <- run_coral_wC(time=time, env=env,
+                 pars=replace(defpars, 
+                              c("kNPQ", "kROS", "k", "b", "sigmaCS", "sigmaCH", "jCO2a"), 
+                              c(40,       30,    1,   5,      0.9,         0.9, 0)),
+                 NPQ="fixed2")
+plot_run_wC(run)
+
+# RUN USING JCO2A (original version of model)
+run <- run_coral(time=time, env=env,
+                 pars=replace(defpars, 
+                              c("kNPQ", "kROS", "k", "b", "sigmaCS", "sigmaCH", "jCO2a"), 
+                              c(40,       30,    1,   5,      0.9,         0.9, 0.32)),
+                 NPQ="fixed2")
+plot_run(run)
+```
+
+
+##### Run 2 -- increase kROS to 100 and b to 5
+```{r, fig.height=7, fig.width=3, eval=T, include=T}
+run <- run_coral(time=time, env=env, pars=replace(defpars, c("kROS", "b"), c(100, 5)))
+plot_run2(run)#
+```
+
+##### Run 2 -- increase kROS to 100 and b to 10
+```{r, fig.height=7, fig.width=3, eval=T, include=T}
+run <- run_coral(time=time, env=env, pars=replace(defpars, c("kROS", "b"), c(100, 10)))
+plot_run2(run)#
+```
+
+##### Run 2 -- fluctuate DIN
+```{r run2_plot, fig.height=7, fig.width=3, eval=T, include=T}
+env2 <- init_env(time=time, L=c(20,20,0), N=c(1e-7,4e-6,2), X=c(0,0,0))
+run2 <- run_coral(time=time, env=env2, pars=pars)
+#plot_run2(run2)
+par(mar=c(2,2,1,1), oma=c(0,0,0,0), mfrow=c(6,1), mgp=c(1,0,0), tck=0.025, lwd=1, xaxs="i", 
+    cex.main=1.2, cex.axis=1, cex.lab=1)
+plot_DIN(run2)
+plot_sh(run2)
+plot_gr(run2)
+plot_Lq(run2)
+plot_pl(run2)
+plot_bl(run2)
 
 ```
 
+##### Run 3 -- fluctuate light with higher DIN
+```{r run3_plot, fig.height=3, fig.width=3, eval=T, include=T}
+# Set run time vector
+#time <- seq(1, 365, 0.5)  # if single model run, use time input
+
+# Initialize environment
+env <- init_env(time=time, L=c(2,40,2), N=c(4e-6,4e-6,0), X=c(0,0,0))
+
+# Run simulation
+run3 <- run_coral(time=time, env=env, pars=defpars)
+par(mar=c(2,2,1,1), oma=c(0,0,0,0), mfrow=c(2,1), mgp=c(1,0,0), tck=0.025, lwd=1, xaxs="i", 
+    cex.main=1.2, cex.axis=1, cex.lab=1)
+plot_sh(run)  # run 1 -- lower DIN
+plot_sh(run3)  # run3 -- higher DIN
+
+```
+
+
+
 ##### Run 2 -- increase jCO2a
-```{r run2_plots}
+```{r run2_plots, eval=F, include=F}
 pars2 <- pars
-pars2$jCO2a <- 10
+pars2$jCO2a <- 1
 run2 <- run_coral(time=time, env=env, pars=pars2)
 plot_run(run2)
 
 ```
 
+##### Run 3 -- increase DIN
+```{r run3_plots, eval=F, include=F}
+env3 <- init_env(time=time, L=c(5,30,2), N=c(4e-6,4e-6,0), X=c(0,0,0))
+pars3 <- pars2
 
+run3 <- run_coral(time=time, env=env3, pars=pars3)
+plot_run(run3)
+
+```
+
+#### RUn 4 - 2e-6 DIN and 
 
 
